// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`From within the empty-project fixture returns the correct pages with a project 1`] = `
[
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/FatalErrorPage/FatalErrorPage.tsx",
    "name": "FatalErrorPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/NotFoundPage/NotFoundPage.tsx",
    "name": "NotFoundPage",
    "warnings": [],
  },
]
`;

exports[`From within the empty-project fixture returns the correct pages without a project 1`] = `
[
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/FatalErrorPage/FatalErrorPage.tsx",
    "name": "FatalErrorPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/NotFoundPage/NotFoundPage.tsx",
    "name": "NotFoundPage",
    "warnings": [],
  },
]
`;

exports[`From within the example-todo-main fixture returns the correct pages with a project 1`] = `
[
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/BarPage/BarPage.tsx",
    "name": "BarPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/FatalErrorPage/FatalErrorPage.js",
    "name": "FatalErrorPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/FooPage/FooPage.tsx",
    "name": "FooPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/HomePage/HomePage.tsx",
    "name": "HomePage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/NotFoundPage/NotFoundPage.js",
    "name": "NotFoundPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/PrivatePage/PrivatePage.tsx",
    "name": "PrivatePage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/TypeScriptPage/TypeScriptPage.tsx",
    "name": "TypeScriptPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/admin/EditUserPage/EditUserPage.jsx",
    "name": "adminEditUserPage",
    "warnings": [],
  },
]
`;

exports[`From within the example-todo-main fixture returns the correct pages without a project 1`] = `
[
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/BarPage/BarPage.tsx",
    "name": "BarPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/FatalErrorPage/FatalErrorPage.js",
    "name": "FatalErrorPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/FooPage/FooPage.tsx",
    "name": "FooPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/HomePage/HomePage.tsx",
    "name": "HomePage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/NotFoundPage/NotFoundPage.js",
    "name": "NotFoundPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/PrivatePage/PrivatePage.tsx",
    "name": "PrivatePage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/TypeScriptPage/TypeScriptPage.tsx",
    "name": "TypeScriptPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/admin/EditUserPage/EditUserPage.jsx",
    "name": "adminEditUserPage",
    "warnings": [],
  },
]
`;

exports[`From within the example-todo-main-with-errors fixture returns the correct pages with a project 1`] = `
[
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/FatalErrorPage/FatalErrorPage.js",
    "name": "FatalErrorPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/HomePage/HomePage.js",
    "name": "HomePage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/NotFoundPage/NotFoundPage.js",
    "name": "NotFoundPage",
    "warnings": [],
  },
]
`;

exports[`From within the example-todo-main-with-errors fixture returns the correct pages without a project 1`] = `
[
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/FatalErrorPage/FatalErrorPage.js",
    "name": "FatalErrorPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/HomePage/HomePage.js",
    "name": "HomePage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/NotFoundPage/NotFoundPage.js",
    "name": "NotFoundPage",
    "warnings": [],
  },
]
`;

exports[`From within the test-project fixture returns the correct pages with a project 1`] = `
[
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/AboutPage/AboutPage.tsx",
    "name": "AboutPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/BlogPostPage/BlogPostPage.tsx",
    "name": "BlogPostPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/Contact/ContactPage/ContactPage.tsx",
    "name": "ContactContactPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/Contact/ContactsPage/ContactsPage.tsx",
    "name": "ContactContactsPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/Contact/EditContactPage/EditContactPage.tsx",
    "name": "ContactEditContactPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/Contact/NewContactPage/NewContactPage.tsx",
    "name": "ContactNewContactPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/ContactUsPage/ContactUsPage.tsx",
    "name": "ContactUsPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/FatalErrorPage/FatalErrorPage.tsx",
    "name": "FatalErrorPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/ForgotPasswordPage/ForgotPasswordPage.tsx",
    "name": "ForgotPasswordPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/HomePage/HomePage.tsx",
    "name": "HomePage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/LoginPage/LoginPage.tsx",
    "name": "LoginPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/NotFoundPage/NotFoundPage.tsx",
    "name": "NotFoundPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/Post/EditPostPage/EditPostPage.tsx",
    "name": "PostEditPostPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/Post/NewPostPage/NewPostPage.tsx",
    "name": "PostNewPostPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/Post/PostPage/PostPage.tsx",
    "name": "PostPostPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/Post/PostsPage/PostsPage.tsx",
    "name": "PostPostsPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/ProfilePage/ProfilePage.tsx",
    "name": "ProfilePage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/ResetPasswordPage/ResetPasswordPage.tsx",
    "name": "ResetPasswordPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/SignupPage/SignupPage.tsx",
    "name": "SignupPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/WaterfallPage/WaterfallPage.tsx",
    "name": "WaterfallPage",
    "warnings": [],
  },
]
`;

exports[`From within the test-project fixture returns the correct pages without a project 1`] = `
[
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/AboutPage/AboutPage.tsx",
    "name": "AboutPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/BlogPostPage/BlogPostPage.tsx",
    "name": "BlogPostPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/Contact/ContactPage/ContactPage.tsx",
    "name": "ContactContactPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/Contact/ContactsPage/ContactsPage.tsx",
    "name": "ContactContactsPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/Contact/EditContactPage/EditContactPage.tsx",
    "name": "ContactEditContactPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/Contact/NewContactPage/NewContactPage.tsx",
    "name": "ContactNewContactPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/ContactUsPage/ContactUsPage.tsx",
    "name": "ContactUsPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/FatalErrorPage/FatalErrorPage.tsx",
    "name": "FatalErrorPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/ForgotPasswordPage/ForgotPasswordPage.tsx",
    "name": "ForgotPasswordPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/HomePage/HomePage.tsx",
    "name": "HomePage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/LoginPage/LoginPage.tsx",
    "name": "LoginPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/NotFoundPage/NotFoundPage.tsx",
    "name": "NotFoundPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/Post/EditPostPage/EditPostPage.tsx",
    "name": "PostEditPostPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/Post/NewPostPage/NewPostPage.tsx",
    "name": "PostNewPostPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/Post/PostPage/PostPage.tsx",
    "name": "PostPostPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/Post/PostsPage/PostsPage.tsx",
    "name": "PostPostsPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/ProfilePage/ProfilePage.tsx",
    "name": "ProfilePage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/ResetPasswordPage/ResetPasswordPage.tsx",
    "name": "ResetPasswordPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/SignupPage/SignupPage.tsx",
    "name": "SignupPage",
    "warnings": [],
  },
  RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/WaterfallPage/WaterfallPage.tsx",
    "name": "WaterfallPage",
    "warnings": [],
  },
]
`;
